# pytest-custom-reporter

./: .gitignore  README.md  pyproject.toml  pytest_custom_reporter.py
src/pytest_custom_reporter/: __init__.py  models.py  plugin.py  settings.py
tests/: test_allure_integration.py  test_corner_cases.py  test_plugin.py  test_remote_upload.py  test_verify_allure_collection.py
